# hillsb-hacks

./: .gitignore  README.md
agent/: classes.py  complete_purchase.py  has_shopping_list_changed.py  mem.py  pyproject.toml  twil.py
webchat/: package.json  pnpm-lock.yaml
webchat/app/: globals.css  layout.tsx  page.tsx
webchat/app/components/: Accordion.tsx  Dropdown.tsx  LogView.tsx  Settings.tsx  Slider.tsx  UploadBar.tsx  ViewOne.tsx  ViewToggle.tsx  ViewTwo.tsx
webchat/app/utils/: submitImage.ts  submitPrefs.ts  types.ts
